--- a/assets/spc-custom-styles.css
+++ b/assets/spc-custom-styles.css
@@ -1,53 +1,3 @@
-
-Skip to content
-
-    Why GitHub?
-                          
-
-
-                    
-Team
-Enterprise
-Explore
-                      
-
-                    
-Marketplace
-Pricing
-                       
-
-
-                        
-
-Sign in
-Sign up
-plotly /
-dash-sample-apps
-Public
-
-2k
-
-    2.4k
-
-Code
-Issues 29
-Pull requests 8
-Actions
-Projects 1
-Wiki
-Security
-
-    Insights
-
-dash-sample-apps/apps/dash-manufacture-spc-dashboard/assets/spc-custom-styles.css
-@ycaokris
-ycaokris Styling edits
-Latest commit 9b1623f on 24 Jul 2019
-History
-2 contributors
-@ycaokris
-@YunkeXiao
-799 lines (658 sloc) 14.6 KB
 /* Table of contents
 ––––––––––––––––––––––––––––––––––––––––––––––––––
 - Banner
@@ -66,7 +16,7 @@ History
 }
 
 body {
-  background-color: #1e2130;
+  background-color: #00051f;
   color: #f3f5f4;
   font-family: "Open Sans", sans-serif;
   width: 100%;
@@ -86,7 +36,7 @@ body {
 
 .banner {
   height: fit-content;
-  background-color: #1e2130;
+  background-color: #00051f;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -184,7 +134,7 @@ body {
 }
 
 .custom-tabs {
-  background-color: #1E2130;
+  background-color: #00051f;
   text-transform: uppercase;
   font-weight: 600;
   font-size: 14px;
@@ -197,7 +147,7 @@ body {
   letter-spacing: 1px;
   color: inherit;
   border: 0;
-  border-bottom: #1E2130 solid 4px !important;
+  border-bottom: #00051f solid 4px !important;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -269,7 +219,7 @@ body {
 #Overlay_OOC_graph > div > div,
 #Volume_OOC_graph > div > div {
   width: 100%;
-  background-color: #1e2130 !important;
+  background-color: #00051f !important;
 }
 
 #quick-stats.row {
@@ -283,7 +233,7 @@ body {
   position: relative;
   z-index: 4;
   width: 100%;
-  border-top: #1E2130 solid 0.8rem;
+  border-top: #00051f solid 0.8rem;
 }
 
 #metric-summary-session {
@@ -294,7 +244,7 @@ body {
 #ooc-piechart-outer {
   height: 100%;
   margin: 0;
-  border-left: #1E2130 solid 0.8rem;
+  border-left: #00051f solid 0.8rem;
   flex: 1 1 auto;
 }
 
@@ -525,7 +475,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  border-right: #1E2130 solid 0.8rem;
+  border-right: #00051f solid 0.8rem;
   flex: 1 1;
   padding: 2rem;
   max-width: 25%;
@@ -766,8 +716,8 @@ body {
     height: fit-content !important;
     justify-content: space-between;
     align-items: flex-start;
-    border-top: 1px solid #1E2130;
-    border-bottom: 1px solid #1E2130;
+    border-top: 1px solid #00051f;
+    border-bottom: 1px solid #00051f;
   }
 
   #metric-rows .column, #metric-rows .columns {
